...
      />
      <Tabs.Screen
        name="diary"
        options={{
          title: '일기',
          tabBarIcon: tabIcon('📓'),
          tabBarButtonTestID: 'tab-button-diary',
        }}
      />
      <Tabs.Screen
        name="settings"
        options={{
          title: '설정',
...
